# frontend-unconstrained

./: frontend-unconstrained.cabal
src/: .#main.hs  FrontendUnconstrained.hs
